# tinc

./: .clang-format  CMakeLists.txt  Cargo.toml  LICENSE  README.md  build.zig  grammar.md  meson.build  todo.md
src/: ast.c  ast.h  ast.rs  ast.zig  compiler.c  compiler.h  generic.c  generic.h  hash.h  lexer.c  lexer.h  ll.h  main.c  main.rs  main.zig  parser.c  parser.h  preprocessor.c  preprocessor.h  scanner.c  scanner.h  string.c  string.h  test_main.c  token.c  token.h  token.rs  token.zig  utils.c  utils.h  vector.c  vector.h
test/: ast.c  hash.c  hash.cpp  main.c  preprocessor.c  preprocessor.cpp  string.c  string.cpp  test_main.c  test_preprocessor.c  test_types.c  vector.c  vector.cpp
